--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "serve-favicon": "^2.4.3"
   },
   "engines": {
     "node": "6.9.4"
@@ -14,7 +15,7 @@
   },
   "keywords": [
     "node",
-    "boostrap",
+    "bootstrap",
     "express",
     "serve-favicon"
   ],
